--- a/index.html
+++ b/index.html
@@ -6,3 +6,8 @@
 
 <h2> Author : Vishal Bharti</h2>
 <h3> Email : bharti.vishal4@gmail.com</h3>
+
+
+<div>
+    <p>Editing from Github directly</p>
+</div>
