--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
-<h1>Hello to Git World!</h1>
+<html>
+    <h1>Hello to Git World!</h1>
 
-<div>
-    <p>Working with git is easy !!!</p>
-</div>
+    <div>
+        <p>Working with git is easy !!!</p>
+    </div>
 
-<div>
-    <p>Editing from Github directly</p>
-</div>
+    <div>
+        <p>Editing from Github directly</p>
+    </div>
 
-<h2> Author : Vishal Bharti</h2>
-<h3> Email : bharti.vishal4@gmail.com</h3>
+    <h2> Author : Vishal Bharti</h2>
+    <h3> Email : bharti.vishal4@gmail.com</h3>
 
-<!-- Add comments --!>
-
+    <!-- Add comments !-->
+</html>
